# puncture

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  diff.txt  err
benches/: writer_bench.rs
src/: bitreader.rs  cached_writer.rs  crc32.rs  extraction.rs  lib.rs  main.rs  unzip.rs  zip.rs
tests/: decode.rs  encode.py  huffman.rs
