[package]
name = "puncture"
authors = ["Orbán Levente"]
description = "A small gzip utility program, intentionally kept simple"
license = "Apache-2 OR MIT"
repository = "https://www.github.com/levyry/puncture"
keywords = [
    "compression",
    "decompression",
    "tool",
    "utility",
    "gzip",
    "mini",
    "educational",
]
categories = ["tools", "compression", "decompression"]
version = "0.1.0"
edition = "2024"
exclude = ["tests/data/*", "tests/encode.py"]

[dependencies]
clap = { version = "4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
crc32fast = "1.5"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Harden
## Stops panics
unwrap_used = "deny"
expect_used = "warn"
# arithmetic_side_effects = "deny"
unreachable = "warn"
unimplemented = "deny"
unchecked_time_subtraction = "deny"
todo = "warn"
string_slice = "deny"
panic_in_result_fn = "deny"
panic = "deny"
exit = "deny"
## Restrictions
if_then_some_else_none = "deny"
str_to_string = "deny"
implicit_clone = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"

# Allowlist
unusual_byte_groupings = "allow"   # Since Huffman uses MSB/LSB in a mixed way
inline_always = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
